Carga del description y title de la pagina

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Powerpallet">
+<Layout title="Powerpallet | Inicio">
 	<Header />
 	<main>
 		<Hero />
