--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import '@fontsource-variable/onest'
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="PowerPallets ofrece pallets de alta calidad para almacenamiento y transporte, asegurando la durabilidad y seguridad de sus productos. Contáctenos para obtener una cotización personalizada." />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/logo.png" />
 		<meta name="generator" content={Astro.generator} />
