Modificación del footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#nosotros" class="hover:underline me-4 md:me-6">Nosotros</a>
+            <a href="#nosotros" class="hover:underline me-4 md:me-6">Sobre nosotros</a>
         </li>
         <li>
             <a href="#servicios" class="hover:underline me-4 md:me-6">Servicios</a>
@@ -15,4 +15,5 @@
             <a href="#contacto" class="hover:underline">Contacto</a>
         </li>
     </ul>
+    <span class="text-sm text-gray-500 dark:text-gray-400 sm:text-center mt-3 md:mt-0">Desarrollado por <a href="#" class="hover:underline" target="_blank">Juan Salvador</a>.</span>
 </footer>
