--- a/src/components/FloattingButton.astro
+++ b/src/components/FloattingButton.astro
@@ -1,5 +1,5 @@
-<a class="flex gap-x-2 fixed bottom-4 md:bottom-8 lg:bottom-12 right-4" href="https://wa.me/973560854" target="_blank" rel="noopener noreferrer">
-    <p class="bg-gray-200 dark:bg-gray-800 m-0 p-1 md:p-2 pr-8 md:pr-14 ml-10 border-l-[3px] border-l-green-600 text-xs md:text-sm text-gray-900 dark:text-gray-100">
+<a class="flex gap-x-2 fixed bottom-4 md:bottom-8 lg:bottom-12 right-4 items-center group" href="https://wa.me/973560854" target="_blank" rel="noopener noreferrer">
+    <p class="bg-gray-200 dark:bg-gray-800 m-0 p-1 md:p-2 pr-8 md:pr-14 ml-10 border-l-[3px] border-l-green-600 text-xs md:text-sm text-gray-900 dark:text-gray-100 opacity-0 group-hover:opacity-100 transform -translate-x-2 group-hover:translate-x-0 transition-all duration-300">
         ¿Necesitas ayuda? <br /> Escríbenos
     </p>
     <div
@@ -19,7 +19,6 @@
             ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
                 d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9"></path><path
                 d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1"
-            ></path></svg
-        >
+            ></path></svg>
     </div>
 </a>
