Modificación del tema oscuro

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -7,7 +7,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
 <section class="container mx-auto w-full py-12 md:py-24 lg:py-32" id="contacto">
   <div class="container px-4 md:px-6">
     <h2
-      class="text-brown-500 dark:text-amber-500 text-3xl font-bold tracking-tighter md:text-4xl/tight text-center"
+      class="text-brown-500 dark:text-yellow-400 text-3xl font-bold tracking-tighter md:text-4xl/tight text-center"
     >
       Contáctenos
     </h2>
@@ -29,26 +29,26 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           method="POST"
         >
           <input
-            class="flex h-10 w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-amber-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
+            class="flex h-10 w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-yellow-400 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
             type="text"
             id="name"
             name="name"
             placeholder="Nombre"
           />
           <input
-            class="flex h-10 w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-amber-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
+            class="flex h-10 w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-yellow-400 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
             type="email"
             id="email"
             name="email"
             placeholder="Email"
           />
           <textarea
-            class="flex min-h-[80px] w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-amber-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
+            class="flex min-h-[80px] w-full rounded-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 px-3 py-2 text-sm text-gray-900 dark:text-gray-100 placeholder:text-gray-500 dark:placeholder:text-gray-400 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-yellow-400 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 max-w-lg flex-1"
             name="message"
             id="mensaje"
             placeholder="Mensaje"></textarea>
           <button
-            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-amber-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brown-500 dark:bg-amber-500 text-gray-100 hover:bg-brown-600 dark:hover:bg-amber-600 h-10 px-4 py-2"
+            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brown-500 dark:focus-visible:ring-yellow-400 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-brown-500 dark:bg-yellow-400 text-gray-100 hover:bg-brown-600 dark:hover:bg-yellow-600 h-10 px-4 py-2"
             type="submit"
           >
             Enviar
@@ -59,7 +59,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
       <div class="flex flex-col space-y-4 text-left lg:text-lg mx-auto">
         <div>
           <p
-            class="flex items-center gap-x-2 text-brown-500 dark:text-amber-500 font-bold"
+            class="flex items-center gap-x-2 text-brown-500 dark:text-yellow-400 font-bold"
           >
             Arequipa
           </p>
@@ -73,7 +73,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:054291596"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >(054) 291596</a
             >
           </div>
@@ -82,7 +82,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 973560854</a
             >
           </div>
@@ -91,7 +91,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 959903590</a
             >
           </div>
@@ -100,7 +100,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 958545409</a
             >
           </div>
@@ -109,7 +109,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <MailIcon /><a
               href="mailto:powerpalletperu@gmail.com"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >powerpalletperu@gmail.com</a
             >
           </div>
@@ -118,14 +118,14 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <MailIcon /><a
               href="mailto:powerpallet@impulsegperu.com"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >powerpallet@impulsegperu.com</a
             >
           </div>
         </div>
         <div>
           <p
-            class="flex items-center gap-x-2 text-brown-500 dark:text-amber-500 font-bold"
+            class="flex items-center gap-x-2 text-brown-500 dark:text-yellow-400 font-bold"
           >
             Lima
           </p>
@@ -142,7 +142,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 973560854</a
             >
           </div>
@@ -151,7 +151,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 959903590</a
             >
           </div>
@@ -160,7 +160,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <PhoneIcon /><a
               href="tel:+51973560854"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >+51 958545409</a
             >
           </div>
@@ -169,7 +169,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <MailIcon /><a
               href="mailto:powerpalletperu@gmail.com"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >powerpalletperu@gmail.com</a
             >
           </div>
@@ -178,7 +178,7 @@ import PhoneIcon from "../icons/PhoneIcon.astro";
           >
             <MailIcon /><a
               href="mailto:powerpallet@impulsegperu.com"
-              class="hover:text-brown-500 dark:hover:text-amber-500"
+              class="hover:text-brown-500 dark:hover:text-yellow-400"
               >powerpallet@impulsegperu.com</a
             >
           </div>
