--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,14 +2,14 @@
     <div class="container px-4 md:px-6 space-y-10 xl:space-y-16">
       <div class="grid max-w-[1300px] mx-auto gap-4 px-4 sm:px-6 md:px-10 md:grid-cols-2 md:gap-16">
         <div>
-          <h1 class="text-brown-500 dark:text-amber-500 lg:leading-tighter text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl xl:text-[3.4rem] 2xl:text-[3.75rem]">
+          <h1 class="text-brown-500 dark:text-yellow-400 lg:leading-tighter text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl xl:text-[3.4rem] 2xl:text-[3.75rem]">
             Económicos, reparables y biodegradables.
           </h1>
           <p class="mx-auto max-w-[700px] text-gray-500 dark:text-gray-200 md:text-xl pt-6 pb-6">
             Nos adaptamos a las medidas, requerimientos de su mercadería y almacenaje.
           </p>
             <a
-              class="inline-flex h-9 items-center justify-center rounded-md bg-gray-900 dark:bg-amber-500 px-4 py-2 text-sm font-medium text-gray-50 dark:text-gray-200 shadow transition-colors hover:bg-gray-900/90 dark:hover:bg-amber-600 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 dark:focus-visible:ring-amber-700 disabled:pointer-events-none disabled:opacity-50" href="https://wa.me/973560854" target="_blank">Pida una cotización</a>
+              class="inline-flex h-9 items-center justify-center rounded-md bg-gray-900 dark:bg-yellow-400 px-4 py-2 text-sm font-medium text-gray-50 dark:text-gray-200 shadow transition-colors hover:bg-gray-900/90 dark:hover:bg-yellow-600 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 dark:focus-visible:ring-yellow-700 disabled:pointer-events-none disabled:opacity-50" href="https://wa.me/973560854" target="_blank">Pida una cotización</a>
         </div>
         <div>
           <img
