--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -7,7 +7,7 @@ import NormativaIcon from "../icons/NormativaIcon.astro";
     <div class="container space-y-12 px-4 md:px-6">
       <div class="flex flex-col items-center justify-center space-y-4 text-center">
         <div class="space-y-2">
-          <h2 class="text-brown-500 dark:text-amber-500 text-3xl font-bold tracking-tighter md:text-4xl/tight">Nuestro servicio de pallets</h2>
+          <h2 class="text-brown-500 dark:text-yellow-400 text-3xl font-bold tracking-tighter md:text-4xl/tight">Nuestro servicio de pallets</h2>
           <p class="max-w-[900px] text-gray-500 dark:text-gray-200 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
             Cumplimos estándares de calidad, seguridad y cuidado del medio ambiente.
           </p>
