--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,28 +48,28 @@ import LightIcon from '../icons/light.astro';
                 <li>
                     <a
                         href="#inicio"
-                        class="block py-2 px-3 md:p-0 text-gray-100 bg-brown-500 dark:bg-amber-500 md:dark:bg-transparent dark:text-gray-100 rounded md:bg-transparent md:text-brown-500 md:dark:text-amber-500"
+                        class="block py-2 px-3 md:p-0 text-gray-100 bg-brown-500 dark:bg-yellow-400 md:dark:bg-transparent dark:text-gray-100 rounded md:bg-transparent md:text-brown-500 md:dark:text-yellow-400"
                         aria-current="page">Inicio</a>
                 </li>
                 <li>
                     <a
                         href="#nosotros"
-                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-amber-500 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Sobre nosotros</a>
+                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-yellow-400 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Sobre nosotros</a>
                 </li>
                 <li>
                     <a
                         href="#servicios"
-                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-amber-500 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
+                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-yellow-400 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
                 </li>
                 <li>
                     <a
                         href="#medidas"
-                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-amber-500 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Medidas</a>
+                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-yellow-400 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Medidas</a>
                 </li>
                 <li>
                     <a
                         href="#contacto"
-                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-amber-500 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+                        class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-brown-500 md:dark:hover:text-yellow-400 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-200 md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
                 </li>
             </ul>
         </div>
